<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout tools:context="com.group5.forumPrototype.SelectModule" android:orientation="vertical" android:padding="16dp" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">


    -<RelativeLayout
    android:layout_height="32dp"
    android:layout_width="258dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_gravity="bottom">

    <Spinner
        android:padding="5dp"
        android:layout_height="match_parent"
        android:layout_width="114dp"
        android:layout_gravity="center"
        android:entries="@array/student_spinner"
        android:background="#ded8d7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/studentSpinner"/>

</RelativeLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/selectModuleText"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="32sp"
        android:text="@string/SelectModule"
        android:layout_marginTop="32dp"/>

    <Button
        android:layout_height="50dp"
        android:layout_width="340dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/CS991Button"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/CS991"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/selectModuleText"/>

    <Button
        android:layout_height="50dp"
        android:layout_width="340dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/CS992Button"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/CS992"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/CS991Button"/>

    <Button
        android:layout_height="50dp"
        android:layout_width="340dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/CS993Button"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/CS993"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/CS992Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>