<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <Spinner
        android:id="@+id/selectModuleStudentSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="#ded8d7"
        android:entries="@array/student_spinner"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forumText" />

    <TextView
        android:id="@+id/forumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/breadcrumbs.PostDisplayPage"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextInitialQuestion"
        android:background="@color/grey"
        android:textColor="@color/black"
        android:paddingTop="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="50dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/ForumPostQuestion"
        android:textSize="15sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forumText" />

    <Button
        android:layout_height="45dp"
        android:layout_width="80dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextInitialQuestion"
        android:id="@+id/editPostButton"
        android:text="@string/editButtonText"
        app:layout_constraintBaseline_toBaselineOf="@+id/deleteButton"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:layout_marginRight="5dp"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="88dp"
        android:layout_height="45dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/deleteButtonText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/editTextInitialQuestion"
        app:layout_constraintEnd_toStartOf="@+id/editPostButton" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/commentsTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/comments"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextInitialQuestion"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"/>

    <Spinner
        android:layout_height="27dp"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#ded8d7"
        android:entries="@array/filter_spinner_comments"
        android:id="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintBaseline_toBaselineOf="@+id/commentsTextView"
        app:layout_constraintStart_toEndOf="@+id/commentsTextView"/>

    <TextView
        android:background="@drawable/text_lines2"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:paddingTop="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="50dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/editTextComment1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        android:text="@string/comment1"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:ems="10"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:background="@drawable/text_lines"
        android:id="@+id/editTextComment2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:paddingTop="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="50dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/comment2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextComment1" />

    <Button
        android:id="@+id/likeButton2"
        android:layout_height="45dp"
        android:layout_width="80dp"
        android:layout_marginRight="10dp"
        android:text="@string/like"
        app:layout_constraintBaseline_toBaselineOf="@+id/replyButton"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/replyButton"
        />

    <Button
        android:id="@+id/replyButton"
        android:layout_height="45dp"
        android:layout_width="80dp"
        android:text="@string/reply"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/editTextComment1"
        app:layout_constraintEnd_toEndOf="@+id/editTextComment1"
        android:layout_marginRight="5dp"
        />

    <Button
        android:id="@+id/replyButton2"
        android:layout_height="45dp"
        android:layout_width="80dp"
        android:text="@string/reply"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/editTextComment2"
        app:layout_constraintEnd_toEndOf="@+id/editTextComment2"
        android:layout_marginRight="5dp"/>

    <Button
        android:id="@+id/likeButton"
        android:layout_height="45dp"
        android:layout_width="80dp"
        android:layout_marginRight="10dp"
        android:text="@string/like"
        app:layout_constraintBaseline_toBaselineOf="@+id/replyButton2"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/replyButton2"/>

    <Button
        android:id="@+id/buttonBackToForumDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/back_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextComment2"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/likeCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toStartOf="@+id/likeButton2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextComment1"
        app:layout_constraintTop_toTopOf="@+id/editTextComment1" />

    <TextView
        android:id="@+id/likeCounter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toStartOf="@+id/likeButton"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="@+id/editTextComment2"
        app:layout_constraintTop_toBottomOf="@+id/likeButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>