<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPost">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="263dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:text=" Select class / CS991 Forum / Add Post"
        android:textColor="@color/black"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp">



        <Spinner
            android:id="@+id/studentSpinner"
            android:layout_alignParentEnd="true"
            android:entries="@array/student_spinner"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#ded8d7"
            android:layout_marginRight="25dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/postTitle"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:hint="@string/title_hint"
            android:background="@color/grey"
            android:gravity="center"
            android:padding="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="1"
        android:layout_marginLeft="25dp">


        <EditText
            android:layout_width="match_parent"
            android:id="@+id/postContent"
            android:layout_height="250dp"
            android:hint="@string/content_hint"
            android:gravity="center"
            android:textStyle="italic"
            android:layout_marginRight="25dp"
            android:background="@color/grey"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backToModuleSelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="175dp"
            android:text="@string/back_button"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/addPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="35dp"
            android:text="@string/add_button"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white" />


    </RelativeLayout>
</LinearLayout>