<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.group5.forumPrototype.ForumDisplay">

    <TextView
        android:id="@+id/breadCrumb"
        android:text="@string/breadcrumbs.91"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textColor="@color/black"

        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp">



        <Spinner
            android:id="@+id/studentSpinner"
            android:layout_alignParentEnd="true"
            android:entries="@array/student_spinner"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ded8d7"
            />


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">

        <TextView
            android:id="@+id/moduleName"
            android:text="@string/module_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"

            >
        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="2dp"

        >

        <TextView
            android:id="@+id/announcementsHeader"
            android:text="@string/announcements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="@drawable/back"
            >
        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        >

        <ListView
            android:id="@+id/announcementsDisplay"
            android:layout_width="match_parent"
            android:layout_height="150dip"
            android:background="@drawable/text_lines"
            >

        </ListView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/ForumDisplay"
            android:text="@string/forum_posts"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"


            >
        </TextView>
        <Spinner
            android:id="@+id/filterSpinner"
            android:layout_alignParentEnd="true"
            android:entries="@array/filter_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ded8d7"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/forumPostsDisplay"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/text_lines2"
            >
        </ListView>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backToModuleSelButton"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="35dp"
            android:onClick="backToModuleSelect"
            android:text="@string/back_button"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/addPost"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="35dp"
            android:text="@string/add_button"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white" />


    </RelativeLayout>


</LinearLayout>
